# marty

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEPLOYMENT.md  DISCORD_BOT_CONTEXT.md  DISCORD_BOT_PLAN.md  LICENSE  Procfile  README.md  ai_client.py  alembic.ini  config.py  crud.py  database.py  docker-compose.test.yml  hardcover_client.py  justfile  main.py  marty.db  prompt_plan.md  pyproject.toml  railway.json  spec.md  todo.md  tools_architecture.md
.cursor/rules/: ai-integration.mdc  api-development.mdc  architecture.mdc  code-quality.mdc  database.mdc  environment.mdc  testing.mdc
.github/workflows/: claude-code-review.yml  gemini-pr-review.yml
alembic/: env.py
alembic/versions/: 22a6418060c5_add_opted_out_field_to_customer_for_.py  65e621b64ab5_add_discord_support_to_customers_and_.py  78c10d7da504_initial_database_schema.py  d82c5d22c9f7_add_name_column_and_consolidate_first_.py
docs/: DISCORD_BOT_PLAN.md  HARDCOVER_SETUP.md  spec.md
prompts/: marty_discord_system_prompt.md  marty_system_prompt.md
scripts/: chat.py  chat_with_marty.py  cleanup_database.py  deploy.sh  explore_hardcover_api.py  smoke_test.py  smoke_test_claude.py  sms.py  tool_demo.py  tools.py
src/: __init__.py  ai_client.py  config.py  crud.py  database.py  main.py  sms_handler.py
src/discord/: bot.py
src/discord_bot/: __init__.py  bot.py  embeds.py
src/tools/: __init__.py  base.py
src/tools/book/: enricher.py
src/tools/conversation/: __init__.py  manager.py
src/tools/discord/: __init__.py  thread_rename.py
src/tools/utils/: __init__.py  query_optimizer.py
tests/: conftest.py  test_ai_client.py  test_book_enricher.py  test_chat_endpoint.py  test_conversation_manager.py  test_database.py  test_discord_bot.py  test_hardcover.py  test_health.py  test_query_optimizer.py  test_sms_gsm7.py  test_sms_handler.py
tools/: __init__.py  base.py
tools/book/: __init__.py  enricher.py
tools/conversation/: manager.py
